fix(theme): More targeted handling of FormRow spacing.

--- a/invenio_modular_deposit_form/assets/semantic-ui/less/invenio_modular_deposit_form/deposit_form.less
+++ b/invenio_modular_deposit_form/assets/semantic-ui/less/invenio_modular_deposit_form/deposit_form.less
@@ -246,9 +246,11 @@
       }
     }
 
-    .fields.invenio-group-field {
+    .invenio-form-row {
       margin-bottom: 0;
+    }
 
+    .fields.invenio-group-field {
       .invenio-text-input-field {
         label.helptext {
           margin-top: 0;
